# CORAL

./: .gitignore  CLAUDE.md  README.md  README_CN.md
.agent/: codeguard-state.json
coral/: _version.py  config.py  types.py
coral/agent/: exit_classifier.py  manager.py  process.py  runtime.py  state.py
coral/agent/builtin/: claude_code.py  codex.py  kiro.py  opencode.py
coral/cli/: __init__.py  author.py  eval.py  start.py  validation.py
coral/grader/: daemon.py  loader.py  subprocess_grader.py  task_grader.py
coral/hooks/: post_commit.py
coral/hub/: attempts.py
coral/template/: coral.md.template  coral_md.py  coral_single.md.template
coral/workspace/: grader_env.py  project.py  worktree.py
docs/content/docs/api/: config.mdx  grader.mdx
docs/content/docs/examples/: tasks.mdx
docs/content/docs/getting-started/: configuration.mdx  quickstart.mdx
docs/content/docs/guides/: custom-grader.mdx  index.mdx  meta.json  rubric-judge.mdx
examples/: README.md
examples/apex-eggshell-skull/: README.md  download_apex_data.py  task.yaml
examples/apex-eggshell-skull/grader/: pyproject.toml
examples/apex-eggshell-skull/grader/src/apex_judge/: __init__.py  dynamic_rubric_state.py  grader.py  judge_md.py  rubric_item.py
examples/apex-eggshell-skull/grader/src/apex_judge/templates/: judge.md.template  rubric_changelog.md.template
examples/apex-frontier-bu/: README.md  download_apex_data.py  task.yaml
examples/dna_design/: README.md  task.yaml
examples/dna_design/grader/: pyproject.toml
examples/dna_design/grader/src/dna_design_grader/: __init__.py  grader.py
examples/drug_design/: task.yaml
examples/drug_design/grader/: pyproject.toml
examples/drug_design/grader/src/drug_design_grader/: __init__.py  grader.py
examples/erdos/: task.yaml
examples/erdos/grader/: pyproject.toml
examples/erdos/grader/src/erdos_grader/: __init__.py  grader.py
examples/race-japan-elderly/: README.md  task.yaml  task_agent_judge.yaml  task_aggregate_only.yaml  task_baseline.yaml
examples/race-japan-elderly/grader/: pyproject.toml
examples/race-japan-elderly/grader/src/race_japan_grader/: __init__.py  grader.py
examples/race-japan-elderly/grader/src/race_japan_grader/references/: reference_article.md
examples/swebench-verified/: .gitignore  task.yaml
examples/swebench-verified/grader/: pyproject.toml
examples/swebench-verified/grader/src/swebench_verified_grader/: __init__.py
examples/terminal-bench/: task.yaml
examples/terminal-bench/grader/: pyproject.toml
examples/terminal-bench/grader/src/terminal_bench_grader/: __init__.py
tests/: test_config.py  test_grader.py  test_grader_daemon.py  test_grader_env.py  test_hooks.py  test_hub.py  test_integration.py  test_manager_reliability.py  test_manager_seen_attempts.py  test_manager_stall.py  test_subprocess_grader.py  test_template.py  test_types.py  test_workspace.py
