[project]
name = "apex-judge"
version = "0.1.0"
description = "Persistent agent-based judge grader with rubric evolution, used by the APEX examples."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_judge"]

[tool.hatch.build.targets.wheel.force-include]
"src/apex_judge/templates/judge.md.template" = "apex_judge/templates/judge.md.template"
"src/apex_judge/templates/rubric_changelog.md.template" = "apex_judge/templates/rubric_changelog.md.template"
