[project]
name = "dna-design-grader"
version = "0.1.0"
description = "CORAL grader for the SAGA DNA enhancer design task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "numpy",
]

[project.optional-dependencies]
ml = [
    "torch",
    "grelu",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dna_design_grader"]
