[project]
name = "drug-design-grader"
version = "0.1.0"
description = "CORAL grader for the SAGA antibiotic drug design task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "rdkit",
    "numpy",
]

[project.optional-dependencies]
ml = [
    "torch",
    "pytorch-lightning",
    "minimol",
    "chemprop==1.6.1",
    "packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drug_design_grader"]
