[project]
name = "erdos-grader"
version = "0.1.0"
description = "CORAL grader for the Erdős minimum overlap problem."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erdos_grader"]
