[project]
name = "race-japan-grader"
version = "0.1.0"
description = "Strict APEX-style rubric judge for the Japan elderly market deep-research task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/race_japan_grader"]

# Reference articles are package data consumed by the grader at runtime.
[tool.hatch.build.targets.wheel.force-include]
"src/race_japan_grader/references" = "race_japan_grader/references"
