[project]
name = "swebench-verified-grader"
version = "0.1.0"
description = "CORAL grader for the SWE-bench Verified meta-solver task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swebench_verified_grader"]
