[project]
name = "terminal-bench-grader"
version = "0.1.0"
description = "CORAL grader for the terminal-bench meta-solver task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_bench_grader"]
